# sudoku-helper-solver-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  backtracking_solution.py  no_backtracking_solution.py  pyproject.toml  starter_sudoku_sets.py  to_linode.tf  verifiers.py  visualize_sudoku_solution.py
.github/workflows/: pythonapp.yml
src/: example_problems.py  main.py  settings.py  sudoku_cube.py
src/db/: db_setup.py  models.py  persistence.py
src/helpers/: __init__.py  cube_locations_mapping.py  errors.py  generate_problems.py  suggestions.py  timer.py  types.py  verifiers.py
src/solutions/: backtracking_solution.py  no_backtracking_solution.py
src/visualizer/: help.py  visualize_sudoku_solution.py
tests/: data.py  test_backtracking.py  test_generate_problem.py  test_no_backtracking.py  test_row_column_checkers.py
