[tool.poetry]
name = "sudoku-helper-solver"
version = "0.1.0"
description = "Get help in solving a Sudoku puzzle"
authors = ["Ambar Das"]
license = "MIT"
readme = "README.md"
packages = [{include = "sudoku_helper_solver"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.2"
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.venv
)/'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
