[tool.poetry]
name = "sudoku-helper-solver"
version = "0.1.0"
description = "Get help in solving a Sudoku puzzle"
authors = ["Ambar Das"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

ambars-sudoku-solver = "^0.1"

fastapi = "^0.95.2"
pygame = "^2.4.0"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.3"
flake8 = "^6.0.0"
mypy = "^0.991"
pre-commit = "^2.20.0"
pycln = "^2.1.2"

#[[tool.poetry.source]]
#name = "testpypi"
#url = "https://test.pypi.org/simple/"
#priority = "supplementary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.venv
)/'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"

[tool.pycln]
all = true
skip-imports = [".venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
